--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 html {
   --color-accent: oklch(65% 50% 220); 
   accent-color: var(--color-accent); 
+  color-scheme: light dark;
 }
 
 body {
@@ -13,7 +14,8 @@ body {
 nav {
   display: flex; 
   margin-bottom: 1em;
-  border-bottom: 1px solid oklch(80% 3% 200); 
+  --border-color: oklch(50% 10% 200 / 40%); 
+  border-bottom: 1px solid var(--border-color);
 }
 
 nav a {
