--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav a.current {
 nav a:hover {
   border-bottom: 0.4em solid var(--color-accent);
   padding-bottom: 0.1em; 
-  background-color: oklch(from var(--color-accent) 95% 5% h); 
+  background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
 }
 
 
@@ -188,5 +188,21 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+/* select  */ 
+
+.color-scheme {
+  position: absolute;
+  top: 1rem; 
+  right: 1rem; 
+  font-size: 80%; 
+  font-family: inherit; 
+}
+
+.color-scheme select {
+  font-family: inherit; 
+  font-size: 1em;
+}
+
 
 
