--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 html {
   --color-accent: oklch(65% 50% 220); 
   accent-color: var(--color-accent); 
-  color-scheme: light dark;
 }
 
 body {
@@ -14,8 +13,7 @@ body {
 nav {
   display: flex; 
   margin-bottom: 1em;
-  --border-color: oklch(50% 10% 200 / 40%); 
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 1px solid oklch(80% 3% 200); 
 }
 
 nav a {
@@ -34,7 +32,7 @@ nav a.current {
 nav a:hover {
   border-bottom: 0.4em solid var(--color-accent);
   padding-bottom: 0.1em; 
-  background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
+  background-color: oklch(from var(--color-accent) 95% 5% h); 
 }
 
 
@@ -188,39 +186,3 @@ a {
 a:hover {
   text-decoration: underline;
 }
-
-/* select  */ 
-
-.color-scheme {
-  position: absolute;
-  top: 1rem; 
-  right: 1rem; 
-  font-size: 80%; 
-  font-family: inherit; 
-}
-
-.color-scheme select {
-  font-family: inherit; 
-  font-size: 1em;
-}
-
-:root {
-  color-scheme: light dark; 
-}
-
-body {
-  transition: background-color 0.3s, color 0.3s;
-}
-
-body[data-theme='light'] {
-  background-color: white;
-  color: black;
-}
-
-body[data-theme='dark'] {
-  background-color: black;
-  color: white;
-}
-
-
-
