--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body {
 nav {
   display: flex; 
   margin-bottom: 1em;
-  border-bottom: 1px solid oklch(80% 3% 200); 
+  border-bottom: 1px;
+  --border-color: oklch(50% 10% 200 / 40%);
+  border-bottom-color: var(--border-color);
 }
 
 nav a {
@@ -26,14 +28,15 @@ nav a {
 }
 
 nav a.current {
-  border-bottom: 0.4em solid oklch(80% 3% 200); 
+  border-bottom: 0.4em; 
+  border-bottom-color: var(--border-color);
   padding-bottom: 0.1em; 
 }
 
 nav a:hover {
   border-bottom: 0.4em solid var(--color-accent);
   padding-bottom: 0.1em; 
-  background-color: oklch(from var(--color-accent) 95% 5% h); 
+  background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
 }
 
 
