--- a/style.css
+++ b/style.css
@@ -190,3 +190,17 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+.color-scheme {
+  position: absolute; 
+  top: 1rem;          
+  right: 1rem;       
+  font-size: 80%;     
+  font-family: inherit;
+}
+
+.color-scheme select {
+  font-family: inherit;
+  font-size: 1rem;      
+  padding: 0.25rem;     
+}
