--- a/style.css
+++ b/style.css
@@ -137,6 +137,13 @@ h2, h3, h4, h5, h6 {
   color: #555;
 }
 
+#projects-pie-plot {
+  max-width: 20em;
+  margin-block: 2em;
+
+  overflow: visible;
+}
+
 
 
 /* CV */
