--- a/style.css
+++ b/style.css
@@ -175,6 +175,29 @@ h2, h3, h4, h5, h6 {
   border-radius: 50%; 
 }
 
+&:has(path:hover) {
+  path:not(:hover) {
+    opacity: 0.5;
+  }
+}
+
+path {
+  transition: 300ms;
+  cursor: pointer;
+
+}
+
+
+.selected {
+  --color: oklch(60% 45% 0) !important;
+
+  &:is(path) {
+    fill: var(--color);
+  }
+}
+
+
+
 
 
 /* CV */
